# KinectTest

./: CMakeLists.txt  README.md  main.cpp  notes.md
